chore(quality): address sonar findings and enable coverage